// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostUserDetails - Snapshots > matches snapshot with different postId 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
          src="https://example.com/jane.jpg"
        />
        <div
          data-testid="avatar-fallback"
        >
          JS
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        >
          Jane Smith
        </div>
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            diff...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              5 days ago
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostUserDetails - Snapshots > matches snapshot with empty name 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
          src="https://example.com/avatar.jpg"
        />
        <div
          data-testid="avatar-fallback"
        >
          U
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        />
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            69de...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              14 days ago
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostUserDetails - Snapshots > matches snapshot with no user image 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
        />
        <div
          data-testid="avatar-fallback"
        >
          JD
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        >
          John Doe
        </div>
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            69de...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              14 days ago
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostUserDetails - Snapshots > matches snapshot with old post 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
          src="https://example.com/avatar.jpg"
        />
        <div
          data-testid="avatar-fallback"
        >
          JD
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        >
          John Doe
        </div>
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            69de...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              almost 4 years ago
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostUserDetails - Snapshots > matches snapshot with recent post 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
          src="https://example.com/avatar.jpg"
        />
        <div
          data-testid="avatar-fallback"
        >
          JD
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        >
          John Doe
        </div>
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            69de...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              5m
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SinglePostUserDetails - Snapshots > matches snapshot with user and post details 1`] = `
<div>
  <div
    class="flex items-center gap-3"
    data-testid="container"
  >
    <div
      class="flex flex-row gap-4"
      data-testid="container"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="avatar"
          data-testid="avatar-image"
          src="https://example.com/avatar.jpg"
        />
        <div
          data-testid="avatar-fallback"
        >
          JD
        </div>
      </div>
      <div
        class="flex flex-col"
        data-testid="container"
      >
        <div
          class="font-bold"
          data-size="md"
          data-testid="typography"
        >
          John Doe
        </div>
        <div
          class="flex flex-row gap-2"
          data-testid="container"
        >
          <div
            class="text-muted-foreground uppercase"
            data-size="sm"
            data-testid="typography"
          >
            69de...7890
          </div>
          <div
            class="flex flex-row items-center gap-1"
            data-testid="container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6v6l4 2"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
              />
            </svg>
            <div
              class="text-muted-foreground"
              data-size="sm"
              data-testid="typography"
            >
              14 days ago
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
